add session status
